ie9 footer alignment fix

--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -33,6 +33,10 @@
             -webkit-transform: none;
             transform: none;
         }
+
+        @include ie-lte(9) {
+            left: $nav-primary-width;
+        }
     }
 
     .open-help & {
